[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
indicatif = "0.17.9"
itertools = "0.13.0"
memoize = "0.4.2"
radix_fmt = "1.0.0"
rayon = "1.10.0"
regex = "1.11.1"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-Clink-arg=-fuse-ld=/usr/local/bin/mold", "-Clink-arg=-Wl,--no-rosegment"]
